--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -6,7 +6,19 @@ set(CMAKE_INCLUDE_CURRENT_DIR ON)
 set(CMAKE_AUTOMOC ON)
 set(CMAKE_AUTOUIC ON)
 
-include(external/FindLibObs.cmake)
+if (NOT DEFINED OBS_OUTPUT_DIR) 
+	include(external/FindLibObs.cmake)
+endif()
+
+if(DEFINED QTDIR${_lib_suffix})
+	list(APPEND CMAKE_PREFIX_PATH "${QTDIR${_lib_suffix}}")
+elseif(DEFINED QTDIR)
+	list(APPEND CMAKE_PREFIX_PATH "${QTDIR}")
+elseif(DEFINED ENV{QTDIR${_lib_suffix}})
+	list(APPEND CMAKE_PREFIX_PATH "$ENV{QTDIR${_lib_suffix}}")
+elseif(DEFINED ENV{QTDIR})
+	list(APPEND CMAKE_PREFIX_PATH "$ENV{QTDIR}")
+endif()
 
 find_package(LibObs REQUIRED)
 find_package(Qt5Core REQUIRED)
@@ -43,11 +55,13 @@ add_dependencies(obs-websocket mbedcrypto)
 
 include_directories( 
 	"${LIBOBS_INCLUDE_DIR}/../UI/obs-frontend-api"
+	"${CMAKE_SOURCE_DIR}/UI/obs-frontend-api"
 	${Qt5Core_INCLUDES}
 	${Qt5WebSockets_INCLUDES}
 	${Qt5Widgets_INCLUDES}
 	${mbedcrypto_INCLUDES}
-	"${CMAKE_SOURCE_DIR}/deps/mbedtls/include")
+	"${CMAKE_SOURCE_DIR}/deps/mbedtls/include"
+	"${CMAKE_SOURCE_DIR}/plugins/obs-websocket/deps/mbedtls/include" )
 
 target_link_libraries(obs-websocket 
 	libobs
@@ -59,81 +73,65 @@ target_link_libraries(obs-websocket
 # --- End of section ---
 
 # --- Windows-specific build settings and tasks ---
-if(WIN32)
-	if(NOT DEFINED OBS_FRONTEND_LIB)
-		set(OBS_FRONTEND_LIB "OBS_FRONTEND_LIB-NOTFOUND" CACHE FILEPATH "OBS frontend library")
-		message(FATAL_ERROR "Could not find OBS Frontend API\'s library !")
+IF (DEFINED OBS_OUTPUT_DIR)	
+	target_link_libraries(obs-websocket obs-frontend-api)
+else()
+	if(WIN32)
+
+		# --- Release package helper ---
+		# The "release" folder has a structure similar OBS' one on Windows
+		set(RELEASE_DIR "${PROJECT_SOURCE_DIR}/release")
+
+	
+
+		#add_custom_command(TARGET obs-websocket POST_BUILD
+		#	COMMAND if $<CONFIG:Release>==1 (
+		#		"${CMAKE_COMMAND}" -E make_directory
+		#		"${RELEASE_DIR}/data/obs-plugins/obs-websocket"
+		#		"${RELEASE_DIR}/obs-plugins/${ARCH_NAME}")
+		#		
+		#	COMMAND if $<CONFIG:Release>==1 ("${CMAKE_COMMAND}" -E copy_directory
+		#		"${PROJECT_SOURCE_DIR}/data"
+		#		"${RELEASE_DIR}/data/obs-plugins/obs-websocket")
+		#
+		#	COMMAND if $<CONFIG:Release>==1 ("${CMAKE_COMMAND}" -E copy 
+		#		"$<TARGET_FILE:obs-websocket>"
+		#		"${QTDIR}/bin/Qt5WebSockets.dll" 
+		#		"${QTDIR}/bin/Qt5Network.dll" 
+		#		"${RELEASE_DIR}/obs-plugins/${ARCH_NAME}")
+		#)
+		# --- End of sub-section ---
+
+	endif()
+	# --- End of section ---
+
+	# --- Linux-specific build settings and tasks ---
+	if(UNIX AND NOT APPLE)
+		set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")
+
+		target_compile_options(mbedcrypto PRIVATE -fPIC)
+		set_target_properties(obs-websocket PROPERTIES PREFIX "")
+		target_link_libraries(obs-websocket
+			obs-frontend-api)
+
+		file(GLOB locale_files data/locale/*.ini)
+
+		install(TARGETS obs-websocket
+			LIBRARY DESTINATION "${CMAKE_INSTALL_PREFIX}/lib/obs-plugins")
+		install(FILES ${locale_files}
+			DESTINATION "${CMAKE_INSTALL_PREFIX}/share/obs/obs-plugins/obs-websocket/locale")
+	endif()
+	# --- End of section ---
+
+	# -- OS X specific build settings and tasks --
+	if(APPLE)
+		set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -stdlib=libc++ -fvisibility=default")
+
+		set_target_properties(obs-websocket PROPERTIES PREFIX "")
+		target_link_libraries(obs-websocket "${OBS_FRONTEND_LIB}")
 	endif()
 
-	target_link_libraries(obs-websocket
-		"${OBS_FRONTEND_LIB}")
-
-	add_custom_command(TARGET obs-websocket POST_BUILD
-		COMMAND if $<CONFIG:Release>==1 ("${CMAKE_COMMAND}" -E copy
-			"${QTDIR}/bin/Qt5WebSockets.dll"
-			"${QTDIR}/bin/Qt5Network.dll"
-			"${CMAKE_BINARY_DIR}/$<CONFIG>")
-
-		COMMAND if $<CONFIG:Debug>==1 ("${CMAKE_COMMAND}" -E copy
-			"${QTDIR}/bin/Qt5WebSocketsd.dll"
-			"${QTDIR}/bin/Qt5Networkd.dll"
-			"${CMAKE_BINARY_DIR}/$<CONFIG>")
-	)
-
-	# --- Release package helper ---
-	# The "release" folder has a structure similar OBS' one on Windows
-	set(RELEASE_DIR "${PROJECT_SOURCE_DIR}/release")
-
-	if(CMAKE_SIZEOF_VOID_P EQUAL 8)
-		set(ARCH_NAME "64bit")
-	else()
-		set(ARCH_NAME "32bit")
-	endif()
-
-	add_custom_command(TARGET obs-websocket POST_BUILD
-		COMMAND if $<CONFIG:Release>==1 (
-			"${CMAKE_COMMAND}" -E make_directory
-			"${RELEASE_DIR}/data/obs-plugins/obs-websocket"
-			"${RELEASE_DIR}/obs-plugins/${ARCH_NAME}")
-			
-		COMMAND if $<CONFIG:Release>==1 ("${CMAKE_COMMAND}" -E copy_directory
-			"${PROJECT_SOURCE_DIR}/data"
-			"${RELEASE_DIR}/data/obs-plugins/obs-websocket")
-
-		COMMAND if $<CONFIG:Release>==1 ("${CMAKE_COMMAND}" -E copy 
-			"$<TARGET_FILE:obs-websocket>"
-			"${QTDIR}/bin/Qt5WebSockets.dll" 
-			"${QTDIR}/bin/Qt5Network.dll" 
-			"${RELEASE_DIR}/obs-plugins/${ARCH_NAME}")
-	)
-	# --- End of sub-section ---
-
 endif()
-# --- End of section ---
 
-# --- Linux-specific build settings and tasks ---
-if(UNIX AND NOT APPLE)
-	set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")
-
-	target_compile_options(mbedcrypto PRIVATE -fPIC)
-	set_target_properties(obs-websocket PROPERTIES PREFIX "")
-	target_link_libraries(obs-websocket
-		obs-frontend-api)
-
-	file(GLOB locale_files data/locale/*.ini)
-
-	install(TARGETS obs-websocket
-		LIBRARY DESTINATION "${CMAKE_INSTALL_PREFIX}/lib/obs-plugins")
-	install(FILES ${locale_files}
-		DESTINATION "${CMAKE_INSTALL_PREFIX}/share/obs/obs-plugins/obs-websocket/locale")
-endif()
-# --- End of section ---
-
-# -- OS X specific build settings and tasks --
-if(APPLE)
-	set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -stdlib=libc++ -fvisibility=default")
-
-	set_target_properties(obs-websocket PROPERTIES PREFIX "")
-	target_link_libraries(obs-websocket "${OBS_FRONTEND_LIB}")
-endif()
+install_obs_plugin_with_data(obs-websocket data)
 # -- End of section --
